don't use unitialized global variable, fdo#53713

Change-Id: I9e5150fb4c5681abe9c786f4c2d80f5a10e8a66b