sc/source/filter/inc/lotattr.hxx
@@ -41,6 +41,7 @@ class ScPatternAttr;
 class SvxColorItem;
 class Color;
 class LotAttrTable;
+class LOTUS_ROOT;
 
 namespace editeng { class SvxBorderLine; }
 
@@ -67,7 +68,7 @@ class LotAttrCache
 {
 public:
 
-    LotAttrCache ();
+    LotAttrCache(LOTUS_ROOT* pLotRoot);
 
     ~LotAttrCache();
 
@@ -111,13 +112,14 @@ private:
     SvxColorItem*       pWhite;
     Color*              pColTab;
     boost::ptr_vector<ENTRY> aEntries;
+
+    LOTUS_ROOT* mpLotusRoot;
 };
 
 
 class LotAttrCol
 {
 public:
-
     void SetAttr (const SCROW nRow, const ScPatternAttr&);
 
     void Apply (const SCCOL nCol, const SCTAB nTab );
@@ -137,6 +139,7 @@ private:
 class LotAttrTable
 {
 public:
+    LotAttrTable(LOTUS_ROOT* pLotRoot);
 
     void SetAttr( const SCCOL nColFirst, const SCCOL nColLast, const SCROW nRow, const LotAttrWK3& );
 
